--- a/document/fr.opensagres.xdocreport.document.docx/pom.xml
+++ b/document/fr.opensagres.xdocreport.document.docx/pom.xml
@@ -6,6 +6,21 @@
 		<version>2.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>fr.opensagres.xdocreport.document.docx</artifactId>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.opensagres.xdocreport</groupId>
